Photos changed + x-overflow stopped.

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   font-family: "Poppins", sans-serif;
   /* box-sizing: border-box; */
   cursor: pointer;
+  /* overflow-x: hidden; */
   overflow-x: hidden;
 }
 
@@ -14,7 +15,6 @@ body {
   background-color: rgb(255 231 246);
   color: black;
   width: 100%;
-  overflow-x: hidden;
 }
 
 .snowflake {
@@ -245,7 +245,7 @@ body {
 .about-me {
   padding: 0 5rem;
   /* margin: 0 132px; */
-  height: auto;
+  /* height: auto; */
 }
 
 main hr {
@@ -269,6 +269,8 @@ main hr {
   padding: 20px;
   /* margin-left: 60px; */
   border-radius: 40px;
+  width: 60%;
+  object-fit: contain;
 } 
 
 .sec-left {
@@ -281,9 +283,12 @@ main hr {
 }
 
 .sections .sec-right img{  
-  height: 300px;
+  /* height: 300px; */
   border-radius: 6px;
   border: 1px solid maroon;
+  height: 300px;
+  /* width: 40%; */
+  object-fit: cover;
 }
 
 @media (max-width: 968px) {
@@ -480,7 +485,7 @@ h1 {
   opacity: 1;
 }
 
-.card:nth-child(1):hover {
+/* .card:nth-child(1):hover {
   transform: perspective(600px) rotateY(10deg) rotateX(10deg);
 }
 
@@ -498,7 +503,7 @@ h1 {
 
 .card:nth-child(3):hover {
   transform: perspective(600px) rotateY(-10deg) rotateX(10deg);
-}
+} */
 
 .participations {
   padding: 0 5rem;
@@ -618,3 +623,5 @@ footer .footer-rights {
     font-size: 1rem;
   }
 }
+
+
